--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="styleSheet" />
+    <link href="./media.css" rel="style styleSheet" />
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -294,10 +295,9 @@
       <h1>My latest <strong>works</strong></h1>
       <p class="works_para">
         " As a full-stack developer, you can help customers by building
-        comprehensive web applications<br />
-        that handle everything from the user interface to server-side logic,
-        providing them <br />with complete, end-to-end solutions tailored to
-        their business needs."
+        comprehensive web applications that handle everything from the user
+        interface to server-side logic, providing them with complete, end-to-end
+        solutions tailored to their business needs."
       </p>
       <div class="works_parts">
         <div class="works_part_1">
@@ -330,7 +330,9 @@
           <ion-icon class="work_icon" name="arrow-forward-outline"></ion-icon>
         </div>
       </div>
-      <button class="work_btn">See more</button>
+      <div class="see_btn">
+        <button class="work_btn">See more</button>
+      </div>
     </section>
 
     <!-- /////////////////////////////////////// -->
